# buddy

./: .dockerignore  Dockerfile  README.md  api.py  azure-pipelines.yml  docker-compose.yaml  main.py  pyproject.toml  regex.py  requirements.txt  server.py
assets/: obscene_words.txt
cogs/: ai_response.py  common_buttons.py  filter.py  general.py  menu.py
cogs/football/: api.py  buttons.py  constants.py
cogs/sieu_nhan/: __init__.py  api.py  buttons.py
static/css/: hyde.css
templates/: index.html
tests/: test_buddybot.py
